@@ -64,6 +64,15 @@
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 6 ;
+		lv2:symbol "GEN1_REVERSE" ;
+		lv2:name "GEN1 Reverse" ;
+		lv2:portProperty lv2:toggled ;
+		lv2:default 0.0 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 7 ;
 		lv2:symbol "GEN1_GROUP" ;
 		lv2:name "GEN1 Group" ;
 		lv2:default 0.0 ;
@@ -71,7 +80,7 @@
 		lv2:maximum 128.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 7 ;
+		lv2:index 8 ;
 		lv2:symbol "GEN1_COARSE" ;
 		lv2:name "GEN1 Coarse" ;
 		lv2:default 0.0 ;
@@ -79,7 +88,7 @@
 		lv2:maximum 4.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 8 ;
+		lv2:index 9 ;
 		lv2:symbol "GEN1_FINE" ;
 		lv2:name "GEN1 Fine" ;
 		lv2:default 0.0 ;
@@ -87,7 +96,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 9 ;
+		lv2:index 10 ;
 		lv2:symbol "GEN1_ENVTIME" ;
 		lv2:name "GEN1 Env.Time" ;
 		lv2:default 0.2 ;
@@ -95,7 +104,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 10 ;
+		lv2:index 11 ;
 		lv2:symbol "DCF1_CUTOFF" ;
 		lv2:name "DCF1 Cutoff" ;
 		lv2:default 1.0 ;
@@ -103,7 +112,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 11 ;
+		lv2:index 12 ;
 		lv2:symbol "DCF1_RESO" ;
 		lv2:name "DCF1 Resonance" ;
 		lv2:default 0.0 ;
@@ -111,7 +120,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 12 ;
+		lv2:index 13 ;
 		lv2:symbol "DCF1_TYPE" ;
 		lv2:name "DCF1 Type" ;
 		lv2:portProperty lv2:integer ;
@@ -124,7 +133,7 @@
 		lv2:maximum 3.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 13 ;
+		lv2:index 14 ;
 		lv2:symbol "DCF1_SLOPE" ;
 		lv2:name "DCF1 Slope" ;
 		lv2:portProperty lv2:integer ;
@@ -135,7 +144,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 14 ;
+		lv2:index 15 ;
 		lv2:symbol "DCF1_ENVELOPE" ;
 		lv2:name "DCF1 Envelope" ;
 		lv2:default 1.0 ;
@@ -143,7 +152,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 15 ;
+		lv2:index 16 ;
 		lv2:symbol "DCF1_ATTACK" ;
 		lv2:name "DCF1 Attack" ;
 		lv2:default 0.0 ;
@@ -151,7 +160,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 16 ;
+		lv2:index 17 ;
 		lv2:symbol "DCF1_DECAY1" ;
 		lv2:name "DCF1 Decay 1" ;
 		lv2:default 0.5 ;
@@ -159,7 +168,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 17 ;
+		lv2:index 18 ;
 		lv2:symbol "DCF1_LEVEL2" ;
 		lv2:name "DCF1 Level 2" ;
 		lv2:default 0.2 ;
@@ -167,7 +176,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 18 ;
+		lv2:index 19 ;
 		lv2:symbol "DCF1_DECAY2" ;
 		lv2:name "DCF1 Decay 2" ;
 		lv2:default 0.5 ;
@@ -175,7 +184,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 19 ;
+		lv2:index 20 ;
 		lv2:symbol "LFO1_SHAPE" ;
 		lv2:name "LFO1 Wave Shape 1" ;
 		lv2:portProperty lv2:integer ;
@@ -189,7 +198,7 @@
 		lv2:maximum 4.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 20 ;
+		lv2:index 21 ;
 		lv2:symbol "LFO1_WIDTH" ;
 		lv2:name "LFO1 Wave Width" ;
 		lv2:default 1.0 ;
@@ -197,7 +206,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 21 ;
+		lv2:index 22 ;
 		lv2:symbol "LFO1_RATE" ;
 		lv2:name "LFO1 Rate" ;
 		lv2:default 0.5 ;
@@ -205,7 +214,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 22 ;
+		lv2:index 23 ;
 		lv2:symbol "LFO1_SWEEP" ;
 		lv2:name "LFO1 Sweep" ;
 		lv2:default 0.0 ;
@@ -213,7 +222,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 23 ;
+		lv2:index 24 ;
 		lv2:symbol "LFO1_PITCH" ;
 		lv2:name "LFO1 Pitch" ;
 		lv2:default 0.0 ;
@@ -221,7 +230,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 24 ;
+		lv2:index 25 ;
 		lv2:symbol "LFO1_CUTOFF" ;
 		lv2:name "LFO1 Cutoff" ;
 		lv2:default 0.0 ;
@@ -229,7 +238,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 25 ;
+		lv2:index 26 ;
 		lv2:symbol "LFO1_RESO" ;
 		lv2:name "LFO1 Resonance" ;
 		lv2:default 0.0 ;
@@ -237,7 +246,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 26 ;
+		lv2:index 27 ;
 		lv2:symbol "LFO1_PANNING" ;
 		lv2:name "LFO1 Panning" ;
 		lv2:default 0.0 ;
@@ -245,7 +254,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 27 ;
+		lv2:index 28 ;
 		lv2:symbol "LFO1_VOLUME" ;
 		lv2:name "LFO1 Volume" ;
 		lv2:default 0.0 ;
@@ -253,7 +262,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 28 ;
+		lv2:index 29 ;
 		lv2:symbol "LFO1_ATTACK" ;
 		lv2:name "LFO1 Attack" ;
 		lv2:default 0.0 ;
@@ -261,7 +270,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 29 ;
+		lv2:index 30 ;
 		lv2:symbol "LFO1_DECAY1" ;
 		lv2:name "LFO1 Decay 1" ;
 		lv2:default 0.5 ;
@@ -269,7 +278,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 30 ;
+		lv2:index 31 ;
 		lv2:symbol "LFO1_LEVEL2" ;
 		lv2:name "LFO1 Level 2" ;
 		lv2:default 0.2 ;
@@ -277,7 +286,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 31 ;
+		lv2:index 32 ;
 		lv2:symbol "LFO1_DECAY2" ;
 		lv2:name "LFO1 Decay 2" ;
 		lv2:default 0.5 ;
@@ -285,7 +294,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 32 ;
+		lv2:index 33 ;
 		lv2:symbol "DCA1_VOLUME" ;
 		lv2:name "DCA1 Volume" ;
 		lv2:default 0.5 ;
@@ -293,7 +302,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 33 ;
+		lv2:index 34 ;
 		lv2:symbol "DCA1_ATTACK" ;
 		lv2:name "DCA1 Attack" ;
 		lv2:default 0.0 ;
@@ -301,7 +310,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 34 ;
+		lv2:index 35 ;
 		lv2:symbol "DCA1_DECAY1" ;
 		lv2:name "DCA1 Decay1" ;
 		lv2:default 0.5 ;
@@ -309,7 +318,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 35 ;
+		lv2:index 36 ;
 		lv2:symbol "DCA1_LEVEL2" ;
 		lv2:name "DCA1 Level 2" ;
 		lv2:default 0.2 ;
@@ -317,7 +326,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 36 ;
+		lv2:index 37 ;
 		lv2:symbol "DCA1_DECAY2" ;
 		lv2:name "DCA1 Decay 2" ;
 		lv2:default 0.5 ;
@@ -325,7 +334,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 37 ;
+		lv2:index 38 ;
 		lv2:symbol "OUT1_WIDTH" ;
 		lv2:name "OUT1 Stereo Width" ;
 		lv2:default 0.0 ;
@@ -333,7 +342,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 38 ;
+		lv2:index 39 ;
 		lv2:symbol "OUT1_PANNING" ;
 		lv2:name "OUT1 Panning" ;
 		lv2:default 0.0 ;
@@ -341,7 +350,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 39 ;
+		lv2:index 40 ;
 		lv2:symbol "OUT1_VOLUME" ;
 		lv2:name "OUT1 Volume" ;
 		lv2:default 0.5 ;
@@ -350,7 +359,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 40 ;
+		lv2:index 41 ;
 		lv2:symbol "DEF1_PITCHBEND" ;
 		lv2:name "DEF1 Pitchbend" ;
 		lv2:default 0.2 ;
@@ -358,7 +367,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 41 ;
+		lv2:index 42 ;
 		lv2:symbol "DEF1_MODWHEEL" ;
 		lv2:name "DEF1 Modwheel" ;
 		lv2:default 0.2 ;
@@ -366,7 +375,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 42 ;
+		lv2:index 43 ;
 		lv2:symbol "DEF1_PRESSURE" ;
 		lv2:name "DEF1 Pressure" ;
 		lv2:default 0.2 ;
@@ -374,7 +383,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 43 ;
+		lv2:index 44 ;
 		lv2:symbol "DEF1_VELOCITY" ;
 		lv2:name "DEF1 Velocity" ;
 		lv2:default 0.2 ;
@@ -382,7 +391,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 44 ;
+		lv2:index 45 ;
 		lv2:symbol "DEF1_CHANNEL" ;
 		lv2:name "DEF1 Channel" ;
 		lv2:portProperty lv2:integer ;
@@ -391,7 +400,7 @@
 		lv2:maximum 16.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 45 ;
+		lv2:index 46 ;
 		lv2:symbol "DEF1_NOTEOFF" ;
 		lv2:name "DEF1 Note Off" ;
 		lv2:portProperty lv2:integer ;
@@ -403,7 +412,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 46 ;
+		lv2:index 47 ;
 		lv2:symbol "CHO1_WET" ;
 		lv2:name "Chorus Wet" ;
 		lv2:default 0.0 ;
@@ -411,7 +420,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 47 ;
+		lv2:index 48 ;
 		lv2:symbol "CHO1_DELAY" ;
 		lv2:name "Chorus Delay" ;
 		lv2:default 0.5 ;
@@ -419,7 +428,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 48 ;
+		lv2:index 49 ;
 		lv2:symbol "CHO1_FEEDB" ;
 		lv2:name "Chorus Feedback" ;
 		lv2:default 0.5 ;
@@ -427,7 +436,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 49 ;
+		lv2:index 50 ;
 		lv2:symbol "CHO1_RATE" ;
 		lv2:name "Chorus Rate" ;
 		lv2:default 0.5 ;
@@ -435,7 +444,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 50 ;
+		lv2:index 51 ;
 		lv2:symbol "CHO1_MOD" ;
 		lv2:name "Chorus Modulation" ;
 		lv2:default 0.5 ;
@@ -444,7 +453,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 51 ;
+		lv2:index 52 ;
 		lv2:symbol "FLA1_WET" ;
 		lv2:name "Flanger Wet" ;
 		lv2:default 0.0 ;
@@ -452,7 +461,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 52 ;
+		lv2:index 53 ;
 		lv2:symbol "FLA1_DELAY" ;
 		lv2:name "Flanger Delay" ;
 		lv2:default 0.5 ;
@@ -460,7 +469,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 53 ;
+		lv2:index 54 ;
 		lv2:symbol "FLA1_FEEDB" ;
 		lv2:name "Flanger Feedback" ;
 		lv2:default 0.5 ;
@@ -468,7 +477,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 54 ;
+		lv2:index 55 ;
 		lv2:symbol "FLA1_DAFT" ;
 		lv2:name "Flanger Daft" ;
 		lv2:default 0.0 ;
@@ -477,7 +486,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 55 ;
+		lv2:index 56 ;
 		lv2:symbol "PHA1_WET" ;
 		lv2:name "Phaser Wet" ;
 		lv2:default 0.0 ;
@@ -485,7 +494,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 56 ;
+		lv2:index 57 ;
 		lv2:symbol "PHA1_RATE" ;
 		lv2:name "Phaser Rate" ;
 		lv2:default 0.5 ;
@@ -493,7 +502,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 57 ;
+		lv2:index 58 ;
 		lv2:symbol "PHA1_FEEDB" ;
 		lv2:name "Phaser Feedback" ;
 		lv2:default 0.5 ;
@@ -501,7 +510,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 58 ;
+		lv2:index 59 ;
 		lv2:symbol "PHA1_DEPTH" ;
 		lv2:name "Phaser Depth" ;
 		lv2:default 0.5 ;
@@ -509,7 +518,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 59 ;
+		lv2:index 60 ;
 		lv2:symbol "PHA1_DAFT" ;
 		lv2:name "Phaser Daft" ;
 		lv2:default 0.0 ;
@@ -518,7 +527,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 60 ;
+		lv2:index 61 ;
 		lv2:symbol "DEL1_WET" ;
 		lv2:name "Delay Wet" ;
 		lv2:default 0.0 ;
@@ -526,7 +535,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 61 ;
+		lv2:index 62 ;
 		lv2:symbol "DEL1_DELAY" ;
 		lv2:name "Delay Delay" ;
 		lv2:default 0.5 ;
@@ -534,7 +543,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 62 ;
+		lv2:index 63 ;
 		lv2:symbol "DEL1_FEEDB" ;
 		lv2:name "Delay Feedback" ;
 		lv2:default 0.5 ;
@@ -542,7 +551,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 63 ;
+		lv2:index 64 ;
 		lv2:symbol "DEL1_BPM" ;
 		lv2:name "Delay BPM" ;
 		lv2:default 180.0 ;
@@ -550,7 +559,7 @@
 		lv2:maximum 360.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 64 ;
+		lv2:index 65 ;
 		lv2:symbol "DEL1_BPMSYNC" ;
 		lv2:name "Delay BPM (sync)" ;
 		lv2:portProperty lv2:toggled ;
@@ -559,7 +568,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 65 ;
+		lv2:index 66 ;
 		lv2:symbol "DEL1_BPMHOST" ;
 		lv2:name "Delay BPM (host)" ;
 		lv2:default 180.0 ;
@@ -569,7 +578,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 66 ;
+		lv2:index 67 ;
 		lv2:symbol "REV1_WET" ;
 		lv2:name "Reverb Wet" ;
 		lv2:default 0.0 ;
@@ -577,7 +586,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 67 ;
+		lv2:index 68 ;
 		lv2:symbol "REV1_ROOM" ;
 		lv2:name "Reverb Room" ;
 		lv2:default 0.5 ;
@@ -585,7 +594,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 68 ;
+		lv2:index 69 ;
 		lv2:symbol "REV1_DAMP" ;
 		lv2:name "Reverb Damp" ;
 		lv2:default 0.5 ;
@@ -593,7 +602,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 69 ;
+		lv2:index 70 ;
 		lv2:symbol "REV1_FEEDB" ;
 		lv2:name "Reverb Feedback" ;
 		lv2:default 0.5 ;
@@ -601,7 +610,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 70 ;
+		lv2:index 71 ;
 		lv2:symbol "REV1_WIDTH" ;
 		lv2:name "Reverb Width" ;
 		lv2:default 0.0 ;
@@ -610,7 +619,7 @@
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 71 ;
+		lv2:index 72 ;
 		lv2:symbol "DYN1_COMPRESS" ;
 		lv2:name "Dynamic Compressor" ;
 		lv2:portProperty lv2:toggled ;
@@ -619,7 +628,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 72 ;
+		lv2:index 73 ;
 		lv2:symbol "DYN1_LIMITER" ;
 		lv2:name "Dynamic Limiter" ;
 		lv2:portProperty lv2:toggled ;
