@@ -5,6 +5,7 @@ ChangeLog
 
 SVN TRUNK
 
+- Sample reverse parameter options added. (EXPERIMENTAL)
 - Allow the build system to include an user specified LDFLAGS.
 
 
